--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <!-- Контейнер для фона неба и поляны -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <!-- Небо -->
+        <!-- Небо (верхняя половина) -->
         <View
-            android:id="@+id/sky"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/sky" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#87CEEB" />
 
-        <!-- Солнце -->
-        <ImageView
-            android:id="@+id/sun"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/sun" />
-
-        <!-- Поляна -->
+        <!-- Поляна (нижняя половина) -->
         <View
-            android:id="@+id/grass"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/grass" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#4CAF50" />
+    </LinearLayout>
 
-        <!-- Колобок -->
-        <ImageView
-            android:id="@+id/kolobok"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/kolobok" />
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Домик -->
+    <ImageView
+        android:id="@+id/house"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/house" />
+
+    <!-- Колобок -->
+    <ImageView
+        android:id="@+id/kolobok"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/kolobok" />
+</RelativeLayout>
