--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <!-- Контейнер для фона неба и поляны -->
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <!-- Небо (верхняя половина) -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="#87CEEB" />
+        <TextView
+            android:id="@+id/textViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Калькулятор оплаты услуг ЖКХ"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"/>
 
-        <!-- Поляна (нижняя половина) -->
-        <View
+        <EditText
+            android:id="@+id/editTextArea"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="#4CAF50" />
+            android:layout_height="wrap_content"
+            android:hint="Введите площадь квартиры (кв.м)"
+            android:inputType="numberDecimal"/>
+
+        <EditText
+            android:id="@+id/editTextServicePrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Цена за услугу (руб.)"
+            android:inputType="numberDecimal"/>
+
+        <CheckBox
+            android:id="@+id/checkBoxHeating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Отопление"/>
+
+        <CheckBox
+            android:id="@+id/checkBoxWater"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Водоснабжение"/>
+
+        <Button
+            android:id="@+id/buttonCalculate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Рассчитать"/>
+
+        <ImageButton
+            android:id="@+id/buttonReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_revert"
+            android:contentDescription="Сброс"/>
+
+        <TextView
+            android:id="@+id/textViewResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Стоимость: 0 руб."
+            android:textSize="16sp"
+            android:paddingTop="16dp"/>
+
+        <TextView
+            android:id="@+id/textViewHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="История расчетов:"
+            android:textSize="16sp"
+            android:paddingTop="16dp" />
+
+        <Button
+            android:id="@+id/buttonClearHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Очистить историю" />
+
     </LinearLayout>
 
-    <!-- Домик -->
-    <ImageView
-        android:id="@+id/house"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/house" />
-
-    <!-- Колобок -->
-    <ImageView
-        android:id="@+id/kolobok"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/kolobok" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
